<resources>
    <string name="app_name">Pest Detection</string>
    <string name="pasword">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="main">Main</string>
    <string name="New">New</string>
    <string name="your_name">Your Name</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="used">Used</string>
    <string name="click_for_location">Click for location</string>
    <string name="next">Next</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="condition">Condition</string>
    <string name="time">Time</string>
    <string name="enter_your_number">Enter Your Number</string>
    <string name="price_of_product">Price of Product</string>
    <string name="post">Post</string>
    <string name="phone">Phone</string>
    <string name="price">Price</string>
    <string name="username">UserName</string>
    <string name="remember_me">Remember Me</string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>

    <string name="call">Call</string>
    <string name="calling">Calling..</string>
    <string name="reinging">Ringing</string>
    <string name="upload">Upload</string>
    <string name="result">Result</string>
    <string name="forget_password">Forget Password</string>
    <string name="title_activity_forget_password">ForgetPassword</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="rest_password">Rest Password</string>
    <string name="pest_detection">Pest Detection</string>

</resources>