<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="8dp">
    <EditText
        android:id="@+id/NumberDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:inputType="phone"
        app:counterEnabled="true"
        android:maxLength="11"

        app:counterMaxLength="11"
        android:hint="@string/enter_your_number"
        android:lines="1"
        android:gravity="top"
        />
    <EditText
        android:id="@+id/PriceDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:hint="@string/price_of_product"
        android:maxLength="7"
        android:lines="1"
        android:inputType="phone"
        android:gravity="top"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/post"
        android:text="@string/post"
        android:onClick="Upload"
        android:layout_marginTop="9dp"
        />
</LinearLayout>