<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pest_detection"
        android:textColor="@color/colorBlack"
        android:textSize="50sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:fontFamily="@font/textstyleee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/etname"
        >

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:hint="@string/your_name"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/etremail"
        >

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:hint="@string/email"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:id="@+id/etrpassword"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:passwordToggleEnabled="true"

        >
        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:maxLength="8"
            android:textStyle="bold"
            android:hint="@string/pasword"
            />


        <Button
            android:id="@+id/btnrlogin"
            android:background="@drawable/background"
            android:backgroundTint="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColorHint="@color/colorBlack"
            android:textStyle="bold"
            android:hint="@string/log_in"
            />
        <Button
            android:layout_marginTop="5dp"
            android:id="@+id/btnrregister"
            android:backgroundTint="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColorHint="@color/colorBlack"
            android:textStyle="bold"
            android:background="@drawable/background"
            android:hint="@string/sign_up"
            />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>