<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pest_detection"
        android:textColor="@color/colorBlack"
        android:textSize="50sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:fontFamily="@font/textstyleee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/etLemail"
        >

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:hint="@string/email"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progressbar"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:passwordToggleEnabled="true"
        android:id="@+id/etlpassword"
        >
        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:maxLength="8"
            android:textStyle="bold"
            android:hint="@string/pasword"
            />


        <CheckBox
            android:id="@+id/login_rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".44"
            app:layout_constraintHorizontal_bias=".88"
            android:layout_gravity="center"
            android:textSize="16dp"
            >
        </CheckBox>
        <Button
            android:id="@+id/btnlogin"
            android:backgroundTint="@color/colorWhite"
            android:background="@drawable/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="2dp"
            android:textColorHint="@color/colorBlack"
            android:textStyle="bold"
            android:hint="@string/log_in"
            />
        <Button
            android:layout_marginTop="5dp"
            android:id="@+id/btnregister"
            android:backgroundTint="@color/colorWhite"
            android:background="@drawable/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColorHint="@color/colorBlack"
            android:textStyle="bold"
            android:hint="@string/sign_up"
            />
        <TextView
            android:id="@+id/forgetpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            />
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>