<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetectFragment">
    <ImageView
        android:id="@+id/PimageView"
        android:src="@drawable/profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="1dp"
        />


        <Button
            android:id="@+id/btnupload"
            android:background="@drawable/background"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="150dp"
            android:text="@string/upload"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnSearch"
        android:background="@drawable/background"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="90dp"
        android:text="@string/search"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnresult"
        android:background="@drawable/background"
        android:gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="30dp"
        android:text="@string/result"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</FrameLayout>