<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/Crview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorRED"
    app:cardElevation="20dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="40dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/PostImage"
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            android:src="@drawable/profile" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:padding="10dp"
            android:textSize="19sp"
            android:textColor="@color/cbutton"
            android:textStyle="bold" />
        <TextView
            android:layout_marginLeft="210dp"
            android:id="@+id/tvname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="19sp"
            android:hint="@string/name"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/TCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/condition"
            android:padding="10dp"
            android:textSize="19sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />
        <TextView
            android:layout_marginLeft="200dp"
            android:id="@+id/tvCondition"
            android:hint="@string/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="19sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:orientation="horizontal">
        <TextView

            android:id="@+id/tvnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:padding="10dp"
            android:textSize="19sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />
        <TextView
            android:layout_marginLeft="210dp"
            android:id="@+id/Tvphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/phone"
            android:textSize="19sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:orientation="horizontal">
        <TextView

            android:id="@+id/Tprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:padding="10dp"
            android:textSize="19sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />
        <TextView
            android:layout_marginLeft="210dp"
            android:id="@+id/TvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/price"
            android:textSize="19sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="470dp"
        android:orientation="horizontal">
        <TextView

            android:id="@+id/TimE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:padding="10dp"
            android:textSize="19sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />
        <TextView
            android:layout_marginLeft="210dp"
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/time"
            android:textSize="19sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.cardview.widget.CardView>