<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/Crview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/PostImage"
                android:layout_width="130dp"
                android:layout_height="110dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvnams"
                android:layout_width="117dp"
                android:layout_height="29dp"
                android:layout_marginTop="116dp"
                android:text="@string/name"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/PostImage"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvname"
                android:layout_width="152dp"
                android:layout_height="30dp"
                android:layout_marginTop="116dp"
                android:text="@string/name"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.714"
                app:layout_constraintStart_toEndOf="@+id/tvnams"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvconds"
                android:layout_width="117dp"
                android:layout_height="27dp"
                android:layout_marginTop="8dp"
                android:text="@string/condition"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tvnams"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/tvnams"
                app:layout_constraintTop_toBottomOf="@+id/tvnams" />

            <TextView
                android:id="@+id/tvCondition"
                android:layout_width="153dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:text="@string/condition"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tvname"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvname"
                app:layout_constraintTop_toBottomOf="@+id/tvname" />

            <TextView
                android:id="@+id/tvpho"
                android:layout_width="117dp"
                android:layout_height="30dp"
                android:layout_marginTop="44dp"
                android:text="@string/phone"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/PostImage"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/tvconds"
                app:layout_constraintTop_toBottomOf="@+id/tvnams" />

            <TextView
                android:id="@+id/Tphone"
                android:layout_width="150dp"
                android:layout_height="27dp"
                android:layout_marginTop="8dp"
                android:text="@string/phone"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tvCondition"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvCondition"
                app:layout_constraintTop_toBottomOf="@+id/tvCondition" />

            <TextView
                android:id="@+id/tvvprice"
                android:layout_width="117dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:text="@string/price"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/TvPrice"
                app:layout_constraintHorizontal_bias="0.212"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvpho" />

            <TextView
                android:id="@+id/TvPrice"
                android:layout_width="146dp"
                android:layout_height="31dp"
                android:layout_marginTop="4dp"
                android:text="@string/price"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/Tphone"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/Tphone"
                app:layout_constraintTop_toBottomOf="@+id/Tphone" />

            <TextView
                android:id="@+id/ttime"
                android:layout_width="123dp"
                android:layout_height="30dp"
                android:layout_marginTop="4dp"
                android:text="@string/time"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tvTime"
                app:layout_constraintHorizontal_bias="0.167"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvvprice" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="146dp"
                android:layout_height="29dp"
                android:layout_marginTop="8dp"
                android:text="@string/time"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/TvPrice"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ttime"
                app:layout_constraintStart_toStartOf="@+id/TvPrice"
                app:layout_constraintTop_toBottomOf="@+id/TvPrice" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>